--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta http-equiv="refresh" content="3; URL=https://dsc.bio/sangelo" />
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 </head>
 
 <body>
