--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta http-equiv="refresh" content="3; URL=https://dsc.bio/sangelo" />
 	<link rel="icon" type="image/png" href="../images/icons/favicon.ico"/>
+	<title>Redirecting...</title>
+	<meta charset="UTF-8">
 </head>
 
 <body>
