--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 
 		<span class="s1-txt3 txt-center">
-			© 2021 Sangelo | Lotta code by <a href="https://colorlib.com/">Colorlib</a>
+			© 2021 Sangelo | A lot of code by <a href="https://colorlib.com/">Colorlib</a>
 		</span>
 		
 	</div>
