sounded strange so i changed it

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</h3>
 
 			<p class="txt-center l1-txt2 p-b-60">
-				My website is under construction
+				This website is under construction
 			</p>
 
 			<button class="flex-c-m s1-txt2 size3 how-btn" onclick="window.location.href='https://discord.gg/kHwhzqdZ3c'">
