--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
+	
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+  new Crate({
+    server: '533012823106781185', // Sangelo's Space
+    channel: '813503332575739905' // #rules
+  })
+</script>
 </head>
+	
 <body>
 	
 	
